# projectm-evallib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build-Windows.yaml
projectm-evallib/: CMakeLists.txt  CodePreprocessor.cpp  CodePreprocessor.hpp  projectMEvalLibConfig.cmake.in
tests/: CMakeLists.txt  CodePreprocessorTest.cpp
